src/main/default/objects/Well__c/Well__c.object-meta.xml
<CustomObject>
    <label>Well</label>
    <nameField>
        <label>Well Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>