src/main/default/objects/Well__c/fields/API_Well_Number__c.field-meta.xml
<CustomField>
    <fullName>API_Well_Number__c</fullName>
    <inlineHelpText>Identifying number assigned to the well by the American Petroleum Institute (API).</inlineHelpText>
    <label>API Well Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>