src/main/default/objects/Well__c/fields/Current_Drilling_Depth__c.field-meta.xml
<CustomField>
    <fullName>Current_Drilling_Depth__c</fullName>
    <inlineHelpText>Current depth of the well as measured while drilling.</inlineHelpText>
    <label>Current Drilling Depth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>