src/main/default/objects/Well__c/fields/Drilling_Company__c.field-meta.xml
<CustomField>
    <fullName>Drilling_Company__c</fullName>
    <inlineHelpText>Company responsible for drilling the well.</inlineHelpText>
    <label>Drilling Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>