src/main/default/objects/Well__c/fields/Drilling_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Drilling_Company_Phone__c</fullName>
    <inlineHelpText>Phone number of the company responsible for drilling the well.</inlineHelpText>
    <label>Drilling Company Phone</label>
    <type>Phone</type>
</CustomField>