src/main/default/objects/Well__c/fields/Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions__c</fullName>
    <inlineHelpText>Travel directions to the well site.</inlineHelpText>
    <label>Driving Directions</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>