src/main/default/objects/Well__c/fields/IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IsArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the well record is deactivated.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>