src/main/default/objects/Well__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <inlineHelpText>Latitude of the well.</inlineHelpText>
    <label>Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>