src/main/default/objects/Well__c/fields/Lease_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Name__c</fullName>
    <inlineHelpText>Name of the lease that gives the operating company rights to explore, drill, and produce oil, gas, and other minerals.</inlineHelpText>
    <label>Lease Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>