src/main/default/objects/Well__c/fields/Lease_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_Number__c</fullName>
    <inlineHelpText>Number of the lease that gives the operating company rights to explore, drill, and produce oil, gas, and other minerals.</inlineHelpText>
    <label>Lease Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>