src/main/default/objects/Well__c/fields/Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description__c</fullName>
    <inlineHelpText>Legal description (cadastral) of the well.</inlineHelpText>
    <label>Legal Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>