src/main/default/objects/Well__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <inlineHelpText>Name of the company operating the well.</inlineHelpText>
    <label>Operating Company</label>
    <length>250</length>
    <type>Text</type>
</CustomField>