src/main/default/objects/Well__c/fields/Operating_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company_Contact__c</fullName>
    <inlineHelpText>Contact person for the company operating the well.</inlineHelpText>
    <label>Operating Company Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>