src/main/default/objects/Well__c/fields/Operating_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company_Phone__c</fullName>
    <inlineHelpText>Contact phone number for the company operating the well.</inlineHelpText>
    <label>Operating Company Phone</label>
    <type>Phone</type>
</CustomField>