src/main/default/objects/Well__c/fields/Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Permit_Number__c</fullName>
    <inlineHelpText>Number of the permit obtained to drill the well.</inlineHelpText>
    <label>Permit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>