src/main/default/objects/Well__c/fields/Proposed_Measured_Depth__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Measured_Depth__c</fullName>
    <inlineHelpText>Proposed measured length of the wellbore, as if determined by a measuring stick.</inlineHelpText>
    <label>Proposed Measured Depth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>