src/main/default/objects/Well__c/fields/Proposed_Total_Depth__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Total_Depth__c</fullName>
    <inlineHelpText>Proposed total depth of the wellbore, as if measured by the pipe required to reach the bottom.</inlineHelpText>
    <label>Proposed Total Depth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>