src/main/default/objects/Well__c/fields/Rig_Name__c.field-meta.xml
<CustomField>
    <fullName>Rig_Name__c</fullName>
    <inlineHelpText>Name of the rig drilling/servicing the well.</inlineHelpText>
    <label>Rig Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>