src/main/default/objects/Well__c/fields/Rig_Number__c.field-meta.xml
<CustomField>
    <fullName>Rig_Number__c</fullName>
    <inlineHelpText>Identifying number for the rig drilling/servicing the well.</inlineHelpText>
    <label>Rig Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>