src/main/default/objects/Well__c/fields/Rig_Type__c.field-meta.xml
<CustomField>
    <fullName>Rig_Type__c</fullName>
    <inlineHelpText>Type of rig drilling/servicing the well.</inlineHelpText>
    <label>Rig Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>