src/main/default/objects/Well__c/fields/SPUD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SPUD_Start_Date__c</fullName>
    <inlineHelpText>Date that drilling to construct the well started.</inlineHelpText>
    <label>SPUD Start Date</label>
    <type>Date</type>
</CustomField>