src/main/default/objects/Well__c/fields/SPUD_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>SPUD_Stop_Date__c</fullName>
    <inlineHelpText>Date that drilling to construct the well finished.</inlineHelpText>
    <label>SPUD Stop Date</label>
    <type>Date</type>
</CustomField>