src/main/default/objects/Well__c/fields/Surface_Area__c.field-meta.xml
<CustomField>
    <fullName>Surface_Area__c</fullName>
    <inlineHelpText>Area of the well site.</inlineHelpText>
    <label>Surface Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>