src/main/default/objects/Well__c/fields/Surface_Block_Number__c.field-meta.xml
<CustomField>
    <fullName>Surface_Block_Number__c</fullName>
    <inlineHelpText>Number of the block in which the well site is located within a quadrant.</inlineHelpText>
    <label>Surface Block Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>