src/main/default/objects/Well__c/fields/Surface_County__c.field-meta.xml
<CustomField>
    <fullName>Surface_County__c</fullName>
    <inlineHelpText>County in which the well site is located.</inlineHelpText>
    <label>Surface County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>