src/main/default/objects/Well__c/fields/Surface_District__c.field-meta.xml
<CustomField>
    <fullName>Surface_District__c</fullName>
    <inlineHelpText>District in which the well site is located.</inlineHelpText>
    <label>Surface District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>