src/main/default/objects/Well__c/fields/Surface_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Surface_Field_Name__c</fullName>
    <inlineHelpText>Field in which the well site is located.</inlineHelpText>
    <label>Surface Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>