src/main/default/objects/Well__c/fields/Surface_Range__c.field-meta.xml
<CustomField>
    <fullName>Surface_Range__c</fullName>
    <inlineHelpText>Range in which the well site is located.</inlineHelpText>
    <label>Surface Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>