src/main/default/objects/Well__c/fields/Surface_Range_Direction__c.field-meta.xml
<CustomField>
    <fullName>Surface_Range_Direction__c</fullName>
    <inlineHelpText>Direction of the range in which the well site is located from the principal meridian.</inlineHelpText>
    <label>Surface Range Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>