src/main/default/objects/Well__c/fields/Surface_Section__c.field-meta.xml
<CustomField>
    <fullName>Surface_Section__c</fullName>
    <inlineHelpText>Section of the township in which the well site is located.</inlineHelpText>
    <label>Surface Section</label>
    <length>100</length>
    <type>Text</type>
</CustomField>