src/main/default/objects/Well__c/fields/Surface_Township__c.field-meta.xml
<CustomField>
    <fullName>Surface_Township__c</fullName>
    <inlineHelpText>Township in which the well site is located.</inlineHelpText>
    <label>Surface Township</label>
    <length>100</length>
    <type>Text</type>
</CustomField>