src/main/default/objects/Well__c/fields/Surface_Township_Direction__c.field-meta.xml
<CustomField>
    <fullName>Surface_Township_Direction__c</fullName>
    <inlineHelpText>Direction of the township in which the well site is located from the base line.</inlineHelpText>
    <label>Surface Township Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>