src/main/default/objects/Well__c/fields/Water_Depth__c.field-meta.xml
<CustomField>
    <fullName>Water_Depth__c</fullName>
    <inlineHelpText>Depth-to-water measurement in the wellbore.</inlineHelpText>
    <label>Water Depth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>