src/main/default/objects/Well__c/fields/Well_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Well_Orientation__c</fullName>
    <inlineHelpText>Direction in which the well is drilled.</inlineHelpText>
    <label>Well Orientation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>