src/main/default/objects/Well__c/fields/WellNumber__c.field-meta.xml
<CustomField>
    <fullName>WellNumber__c</fullName>
    <inlineHelpText>Identifying number assigned to the well by the operating company.</inlineHelpText>
    <label>Well Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>